--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,5 +19,5 @@
     </mat-error>
   </mat-form-field>
 
-  <button mat-button type="submit" [disabled]="!formGroup.valid">Login</button>
+  <button mat-raised-button color="primary" type="submit" [disabled]="!formGroup.valid" class="login-button">Login</button>
 </form>
