--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 .login {
-  display: inline-block;
-  align-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
