--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,18 @@
 .login-component {
   min-width: 150px;
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
 }
 
 .login-field {
   width: 100%;
+}
+
+.login-button {
+  width: 60%;
+  display: inline-block;
+  position: relative;
+  left: 20%;
+  right: 20%;
+  align-content: center;
 }
